--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,1 +1,24 @@
-<h1>happy</h1>
+<div class="container my-5">
+    <form action="/shortURL?_method=PUT" method="POST">
+        <div class="input-group mb-3">
+            <input type="url" class="form-control" name="origin_URL" placeholder="Input URL" aria-label="Input URL" aria-describedby="button-addon2">
+            <button class="btn btn-primary" type="submit" id="button-addon2">Create</button>
+            <div class="valid-feedback">Success! You've done it.</div>
+            <div class="invalid-feedback">Sorry, that username's taken. Try another?</div>
+        </div>
+    </form>
+    {{#if renderURLConfig}}
+    <div>
+      <div class="alert alert-info" role="alert">
+          <p><span class="mr-2">{{renderURLConfig.origin_URL}}: </span> <code>{{renderURLConfig.newURL}}</code></p>
+      </div>
+    </div>
+    {{/if}}
+    {{#if errorMessage}}
+    <div>
+      <div class="alert alert-info" role="alert">
+          <p><code>{{errorMessage}}</code></p>
+      </div>
+    </div>
+    {{/if}}
+</div>
