Readme and comment

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,6 +1,8 @@
 <div class="container my-5">
     <form action="/shortURL?_method=PUT" method="POST" id="submit-url-form" novalidate >
         <div class="input-group mb-3">
+            <!--Use required to ensure No empty data input-->
+            <!--type="url" to make sure input is indeed URL-->
             <input type="url" class="form-control" name="origin_URL" placeholder="Input URL" aria-label="Input URL" aria-describedby="button-addon2" required>
             <button class="btn btn-primary" type="submit" id="submit-btn">Create</button>
             <div class="invalid-feedback">Sorry, We need an URL. Need to begin with http</div>
