--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -29,9 +29,9 @@
     <div class="container mt-5 d-flex justify-content-center">
         <image src="/images/ExportedContentImage_00.png" width="200" height="200">
     </div>
-
     {{{body}}}
     <!--bootstap-->
+    <script src="{{script}}"></script>
     <script src="/javascripts/popper.min.js"></script>
     <script src="/javascripts/bootstrap.min.js"></script>
 </body>
